--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
 	<meta name="viewport" content="width=, initial-scale=1.0">
 	<title>laura</title>
 
-	<link rel="stylesheet" href="css/stylemockup.css">	
+	<link rel="stylesheet" href="css/stylelayout.css">	
 </head>
 <body>
+
+	<div class="posicionSticky">
+		 <p style="text-align: center;">
+			<a href="https://https://www.facebook.com/bancopopulardecostarica/?locale=es_LA/" target="_blank">
+				<img src="img/facebook.png" alt="" width="40px">
+			</a> 
+		</p>
+
+		<p style="text-align: center;">	
+		    <a href="https://https://www.instagram.com/bcopopular/?hl=es/" target="_blank">
+				<img src="img/instagram.png" alt="" width="40px">
+			</a>
+		</p>
+
+		<p style="text-align: center;">	
+			<a href="https://https://co.linkedin.com/company/banco-popular/" target="_blank">
+				<img src="img/linkeding.png" alt="" width="40px">
+			</a>
+		</p>
+    </div>
 	
 <div class="container">	
 	<header class="headerMenu"> 
@@ -16,7 +36,7 @@
 					
 					<ul>
 						<li><a href="">Inicio</a></li>
-						<li><a href="paginas/galeriamockup.html">Galería</a></li>
+						<li><a href="">Galería</a></li>
 						<li><a href="">Contacto</a></li>
 						<li><a href="">Sobre nosotros</a></li>
 					</ul>
@@ -25,7 +45,8 @@
 	</header>
 
 	<main>	
-		<img src="img/carita.jpg" alt="">
+		<img src="img/about.jpg" alt="">
+
 
 		<div class="noticias">
 			<h2>Sección de noticias</h2>
@@ -46,43 +67,103 @@
 
 		
 
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Voluptates, aperiam? Fugiat labore impedit tempore, voluptas illum ad, cupiditate iure odit itaque maxime harum, neque veniam dolorum architecto similique. Consequuntur, ducimus.	</p>
+		   <p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Voluptates, aperiam? Fugiat labore impedit tempore, voluptas illum ad, cupiditate iure odit itaque maxime harum, neque veniam dolorum architecto similique. Consequuntur, ducimus.	</p>
 
 
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Voluptates, aperiam? Fugiat labore impedit tempore, voluptas illum ad, cupiditate iure odit itaque maxime harum, neque veniam dolorum architecto similique. Consequuntur, ducimus.	</p>
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Voluptates, aperiam? Fugiat labore impedit tempore, voluptas illum ad, cupiditate iure odit itaque maxime harum, neque veniam dolorum architecto similique. Consequuntur, ducimus.	</p>
 
 
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Voluptates, aperiam? Fugiat labore impedit tempore, voluptas illum ad, cupiditate iure odit itaque maxime harum, neque veniam dolorum architecto similique. Consequuntur, ducimus.	</p>
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Voluptates, aperiam? Fugiat labore impedit tempore, voluptas illum ad, cupiditate iure odit itaque maxime harum, neque veniam dolorum architecto similique. Consequuntur, ducimus.	</p>
 
 
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Voluptates, aperiam? Fugiat labore impedit tempore, voluptas illum ad, cupiditate iure odit itaque maxime harum, neque veniam dolorum architecto similique. Consequuntur, ducimus.	</p>
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Voluptates, aperiam? Fugiat labore impedit tempore, voluptas illum ad, cupiditate iure odit itaque maxime harum, neque veniam dolorum architecto similique. Consequuntur, ducimus.	</p>
 
 
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Voluptates, aperiam? Fugiat labore impedit tempore, voluptas illum ad, cupiditate iure odit itaque maxime harum, neque veniam dolorum architecto similique. Consequuntur, ducimus.	</p>
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Voluptates, aperiam? Fugiat labore impedit tempore, voluptas illum ad, cupiditate iure odit itaque maxime harum, neque veniam dolorum architecto similique. Consequuntur, ducimus.	</p>
 
 
-		<a href="" class="ejemploLinea1">Elemento tipo línea</a>
-		<p class="elementoBloque1">Esto es un elemento bloque</p>
+		   <a href="" class="ejemploLinea1">Elemento tipo línea</a>
+		   <p class="elementoBloque1">Esto es un elemento bloque</p>
 
 		</div>
+
+		<!-- <div class="posicionRelativa"> 
+			<p>Este es un parrafo que esta dentro de una posicion relativa</p>
+
+			<div class="posicionAbsoluta">
+				<p>Este es un parrafo que esta dentro de una posicion absoluta Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint dignissimos fugit nemo, optio. Dolores, natus ut dignissimos voluptatum iste, ipsum nisi mollitia officia vel, quo obcaecati, earum. Facilis, molestiae, pariatur?</p>
+			</div>
+
+		</div>
+		 -->
+
+		<div>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam esse, doloremque obcaecati consequuntur alias quod voluptatem dolore natus eum, dicta ut, quidem eligendi dolorum pariatur modi accusamus temporibus sit, suscipit!
+
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos pariatur reiciendis consequuntur quos impedit nobis! Aut, aliquid sit alias dicta, tempore iure sunt totam! Ex sequi error sint laboriosam debitis.
+			
+			Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa, laudantium mollitia. Excepturi at consequatur expedita, eius reprehenderit numquam, amet hic reiciendis eligendi dicta deserunt accusamus ad repudiandae et veniam velit.
+
+			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id laborum, ipsa enim. Commodi enim quidem nesciunt dolorum aliquid vero, incidunt saepe magnam quia culpa facilis rem laboriosam consectetur minima rerum!	
+			</p>
+		</div>
+
+        <!-- Aqui inicia Galleria  -->
+        <div class="galleryAll">
+		<div class="gallery">
+		  <a target="_blank" href="img/img_.jpg">
+		    <img src="img/img_.jpg" alt="Cinque Terre" width="600" height="400">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="img_2.jpg">
+		    <img src="img/img_2.jpg" alt="Forest" width="600" height="400">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="img_3.jpg">
+		    <img src="img/img_3.jpg" alt="Northern Lights" width="600" height="400">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="img_4.jpg">
+		    <img src="img/img_4.jpg" alt="Mountains" width="600" height="400">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+		</div>
+        <!-- Aqui finaliza Galleri -->
+		
+
+
 	</main>	
 
 	<footer>
-		<p>Página web realizada por Calletana López Baleta &copy; 2024</p>
+		
+		<p>Página web realizada por laura camila gomez ramirez &copy; 2024</p>
 
-		<p>
+		 
 			<a href="https://https://www.facebook.com/bancopopulardecostarica/?locale=es_LA/" target="_blank">
 				<img src="img/facebook.png" alt="" width="40px">
-			</a>
+			</a> 
+		</p>
 
-			<a href="https://https://www.instagram.com/bcopopular/?hl=es/" target="_blank">
+		<p>	<a href="https://https://www.instagram.com/bcopopular/?hl=es/" target="_blank">
 				<img src="img/instagram.png" alt="" width="40px">
 			</a>
+		</p>
 
-			<a href="https://https://co.linkedin.com/company/banco-popular/" target="_blank">
+		<p>	<a href="https://https://co.linkedin.com/company/banco-popular/" target="_blank">
 				<img src="img/linkeding.png" alt="" width="40px">
 			</a>
 		</p>
+		
 	</footer>
 
 </div>
